Add DingTalk, Feishu, and WeChat Work integration; along with several bug fixes.